kubernetes/apps/network/envoy-gateway/config/externalservices.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-external
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas-external
  labels:
    kubernetes.io/service-name: truenas-external
addressType: FQDN # Corrected: Added addressType for the FQDN
endpoints:
  - addresses:
      - nas.main.internal
ports:
  - name: https
    protocol: TCP
    port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == any(200,401)"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "truenas.f9.casa"
  rules:
    - backendRefs:
        - name: truenas-external
          port: 443
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: truenas
spec:
  extAuth:
    headersToExtAuth:
      - "accept"
      - "cookie"
      - "location"
      - "authorization"
      - "proxy-authorization"
      - "header-authorization"
      - "x-forwarded-proto"
      - "x-forwarded-for"
    failOpen: false
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: truenas
---
apiVersion: v1
kind: Service
metadata:
  name: remote-external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-external
  labels:
    kubernetes.io/service-name: remote-external
addressType: FQDN
endpoints:
  - addresses:
      - nas.main.internal
ports:
  - name: http
    protocol: TCP
    port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: remote
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == any(200,401)"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "remote.f9.casa"
  rules:
    - backendRefs:
        - name: remote-external
          port: 3000
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: remote
spec:
  extAuth:
    headersToExtAuth:
      - "accept"
      - "cookie"
      - "location"
      - "authorization"
      - "proxy-authorization"
      - "header-authorization"
      - "x-forwarded-proto"
      - "x-forwarded-for"
    failOpen: false
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: remote
---
apiVersion: v1
kind: Service
metadata:
  name: nanokvm-external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nanokvm-external
  labels:
    kubernetes.io/service-name: nanokvm-external
addressType: FQDN
endpoints:
  - addresses:
      - kvm.not.internal
ports:
  - name: http
    protocol: TCP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nanokvm
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == any(200,401)"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "kvm.f9.casa"
  rules:
    - backendRefs:
        - name: nanokvm-external
          port: 80
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: nanokvm
spec:
  extAuth:
    headersToExtAuth:
      - "accept"
      - "cookie"
      - "location"
      - "authorization"
      - "proxy-authorization"
      - "header-authorization"
      - "x-forwarded-proto"
      - "x-forwarded-for"
    failOpen: false
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: nanokvm
---
apiVersion: v1
kind: Service
metadata:
  name: doco-cd-external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6584
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: doco-cd-external
  labels:
    kubernetes.io/service-name: doco-cd-external
addressType: FQDN
endpoints:
  - addresses:
      - nas.main.internal
ports:
  - name: http
    protocol: TCP
    port: 6584
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: doco-cd
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: "https://doco-cd.f9.casa/v1/health"
spec:
  hostnames:
    - "doco-cd.f9.casa"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: doco-cd-external
          port: 6584
---
apiVersion: v1
kind: Service
metadata:
  name: garage-external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3909
    - name: s3
      port: 3900
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: garage-external
  labels:
    kubernetes.io/service-name: garage-external
addressType: FQDN
endpoints:
  - addresses:
      - nas.main.internal
ports:
  - name: http
    protocol: TCP
    port: 3909
  - name: s3
    protocol: TCP
    port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == any(200,401)"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "garage.f9.casa"
  rules:
    - backendRefs:
        - name: garage-external
          port: 3909
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 403"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "s3.f9.casa"
    - "*.s3.f9.casa"
    - "community.f9.casa" # https://meta.discourse.org/t/s3-not-aws-backups-stopped-working-presumably-since-an-update/382582
  rules:
    - backendRefs:
        - name: garage-external
          port: 3900
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: garage
spec:
  extAuth:
    headersToExtAuth:
      - "accept"
      - "cookie"
      - "location"
      - "authorization"
      - "proxy-authorization"
      - "header-authorization"
      - "x-forwarded-proto"
      - "x-forwarded-for"
    failOpen: false
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: garage
